--- a/iot_controller/Dockerfile
+++ b/iot_controller/Dockerfile
@@ -5,8 +5,8 @@ ENV PYTHONUNBUFFERED=1 \
 WORKDIR /app
 
 COPY requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt --upgrade
 
 COPY app.py app.py
-
-CMD ["python", "app.py"]
+EXPOSE 5000
+CMD ["hypercorn", "app:app", "--bind", "0.0.0.0:5000", "--worker-class", "asyncio","--reload"]
