--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,28 @@ services:
   mongo:
     image: mongo
     restart: on-failure
-    # environment:
-    #   MONGO_INITDB_ROOT_USERNAME: aveen
-    #   MONGO_INITDB_ROOT_PASSWORD: mops
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: aveen
+      MONGO_INITDB_ROOT_PASSWORD: mops
     ports:
       - "27017:27017"
     networks:
       - mops
     depends_on:
       - rabbitmq
+    volumes:
+    - mongo_data:/data/db
   rabbitmq:
     image: rabbitmq:3-management
     ports:
       - "5672:5672"
       - "15672:15672"
     restart: on-failure
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: aveen
+      RABBITMQ_DEFAULT_PASS: mops
     networks:
       - mops
 
@@ -28,6 +35,8 @@ services:
     restart: always
     ports:
       - "8070:8070"
+    volumes:
+      - data_simulator:/data_simulator
     networks:
       - mops
   iot_controller:
@@ -40,9 +49,10 @@ services:
     depends_on:
       - mongo
       - rabbitmq
+    volumes:
+      - iot_controller:/iot_controller
     networks:
       - mops
-  #     - rabbitmq
   rule_engine:
     build:
       context: ./rule_engine
@@ -56,8 +66,39 @@ services:
           target: .
     depends_on:
       - iot_controller
+    volumes:
+      - rule_engine:/rule_engine
     networks:
       - mops 
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - prometheus_data:/prometheus
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - mops
+  grafana:
+    image: grafana/grafana:latest
+    depends_on:
+      - prometheus
+    restart: unless-stopped
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana_storage:/var/lib/grafana
+    networks:
+      - mops
 networks:
   mops:
     driver: bridge
+volumes:
+  prometheus_data:
+  mongo_data:
+  rabbitmq_data:
+  rule_engine:
+  iot_controller:
+  data_simulator:
+  grafana_storage:
+
